@@ -563,20 +563,22 @@ int FOptiMove::capDuration (const char cap[], int affcnt) const
 
   float ms{0};
   const char* p = cap;
-  auto parse_digit = [&p, &affcnt] (float& num)
-  {
-    if ( std::isdigit(uChar(*p)) )
-      num = num * 10 + float(*p - '0');
-    else if ( *p == '*' )
-      num *= float(affcnt);
-    else if ( *p == '.' )
-    {
-      p++;
 
-      if ( *p != '>' && std::isdigit(uChar(*p)) )
-        num += float((*p - '0') / 10.0);
-    }
-  };
+  auto parse_digit = \
+      [&p, &affcnt] (float& num)
+      {
+        if ( std::isdigit(uChar(*p)) )
+          num = num * 10 + float(*p - '0');
+        else if ( *p == '*' )
+          num *= float(affcnt);
+        else if ( *p == '.' )
+        {
+          p++;
+
+          if ( *p != '>' && std::isdigit(uChar(*p)) )
+            num += float((*p - '0') / 10.0);
+        }
+      };
 
   while ( *p )
   {
